--- a/ekoterm-org-ember/app/index.html
+++ b/ekoterm-org-ember/app/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -21,5 +21,6 @@
     <script src="assets/ekoterm-org-ember.js"></script>
 
     {{content-for "body-footer"}}
+
   </body>
 </html>
