Changed navbar to navbar-default

--- a/ekoterm-org-ember/app/index.html
+++ b/ekoterm-org-ember/app/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     {{content-for "body"}}
-    <div class="navbar navbar-fixed-top">
+    <div class="navbar navbar-default">
             <div class="container">
               
               <!-- .btn-navbar is used as the toggle for collapsed navbar content -->
